fixed alignment of pages

--- a/static/frontsite/aboutus.css
+++ b/static/frontsite/aboutus.css
@@ -15,7 +15,7 @@ body {
     padding-right: 25px;
     font-size: 1.2em;
     position: relative;
-    left:45%;
+    left:80%;
     top:-40px;
     vertical-align:middle;
 
